--- a/.config
+++ b/.config
@@ -3,3 +3,6 @@ JAIL		/sgoinfre/thestalledones
 MOULFACE	/sgoinfre/moulinette_face_reveal.png
 SCRIPTS		./scripts
 INFOFILE	./.info.json
+
+AUTODIR		~/.stallman
+AUTOCMD		sm
