testing git sync

--- a/.config
+++ b/.config
@@ -4,5 +4,5 @@ MOULFACE	/sgoinfre/moulinette_face_reveal.png
 SCRIPTS		./scripts
 INFOFILE	./.info.json
 
-AUTODIR		.stallman
+AUTODIR		.stallmans
 AUTOCMD		sm
