--- a/.config
+++ b/.config
@@ -3,7 +3,7 @@ JAIL		/sgoinfre/thestalledones
 MOULFACE	/sgoinfre/moulinette_face_reveal.png
 SCRIPTS		./scripts
 INFOFILE	./.info.json
-DEBUG		true
+DEBUG		false
 
 AUTODIR		.stallman
 AUTOCMD		sm
