further globalvar work

--- a/.config
+++ b/.config
@@ -1,6 +1,7 @@
 SGOINFRE	/sgoinfre
 JAIL		/sgoinfre/thestalledones
 MOULFACE	/sgoinfre/moulinette_face_reveal.png
+FLASHBANG	/sgoinfre/thinkfast.jpg
 SCRIPTS		./scripts
 INFOFILE	./.info.json
 AUTODIR		.stallman
