added script obfuscation

--- a/.config
+++ b/.config
@@ -6,3 +6,7 @@ SCRIPTS		./scripts
 INFOFILE	./.info.json
 AUTODIR		.stallman
 AUTOCMD		sm
+FILEEXT		.sm
+OBFUSCATE	true
+OBFUSKEEP	2
+OBFUSLENGTH	40
