--- a/.config
+++ b/.config
@@ -1,13 +1,13 @@
-SGOINFRE	/sgoinfre
+SGOINFRE	/sgoinfre/ST_test
 JAIL		/sgoinfre/thestalledones
 MOULFACE	/sgoinfre/moulinette_face_reveal.png
 HOLYSTALL	/sgoinfre/holy_stallman.png
 FLASHBANG	/sgoinfre/thinkfast.jpg
-SCRIPTS		./scripts
+SCRIPTS		./load/scripts
 INFOFILE	./.info.json
 AUTODIR		.stallman
 AUTOCMD		sm
 FILEEXT		.sm
 OBFUSCATE	true
-OBFUSKEEP	2
+OBFUSKEEP	3
 OBFUSLENGTH	230
