Added encryption options to config

--- a/.config
+++ b/.config
@@ -8,6 +8,8 @@ INFOFILE	./.info.json
 AUTODIR		.stallman
 AUTOCMD		sm
 FILEEXT		.sm
+ENCRYPT		true
+ENCRYPTPASS	STALLMAN
 OBFUSCATE	true
 OBFUSKEEP	3
 OBFUSLENGTH	230
