--- a/.config
+++ b/.config
@@ -1,15 +1,18 @@
-SGOINFRE	/sgoinfre/ST_test
+SGOINFRE	/sgoinfre/TSTLMNSCRIPTS
 JAIL		/sgoinfre/thestalledones
 MOULFACE	/sgoinfre/moulinette_face_reveal.png
 HOLYSTALL	/sgoinfre/holy_stallman.png
 FLASHBANG	/sgoinfre/thinkfast.jpg
+LOAD		./load
 SCRIPTS		./load/scripts
+STALLMAN	./load/STALLMAN.sm
 INFOFILE	./.info.json
 AUTODIR		.stallman
 AUTOCMD		sm
 FILEEXT		.sm
+ENCRYPTEXT	encr
 ENCRYPT		true
-ENCRYPTPASS	STALLMAN
+ENCRYPTPASS	STALLMAN1337
 OBFUSCATE	true
 OBFUSKEEP	3
 OBFUSLENGTH	230
